# distributed_chat_system

./: Dockerfile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  run_dev.sh
config/: config.example.env
demos/: demo_distributed_chat.py  demo_instructions.md  demo_summary_report.md  demo_video_script.md  quick_start.sh  simple_demo_run.py
docs/: deployment_and_testing.md  distributed_websocket_technical_solution.md  final_validation_summary.md
src/: complete_implementation.py
tests/: core_function_test_report.txt  direct_core_test.py  simple_functionality_test.py  simplified_test_report.txt  technical_solution_validation_report.md  test_websocket_functionality.py
