[project]
name = "distributed-chat-system"
version = "0.1.0"
description = "分布式WebSocket对话系统"
requires-python = ">=3.14"
dependencies = [
    "langgraph>=0.2.0",
    "redis>=5.2.1", 
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "langgraph-checkpoint-redis",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.17.0",
    "psutil>=5.9.0",
    "pydantic>=2.5.0",
    "celery>=5.3.0",
    "locust>=2.20.0",
    "faker>=20.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0", 
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]